# ReversiGame-C-

./: CMakeLists.txt  README.md  log.txt
client/: CMakeLists.txt  log.txt  main.cpp  makefile  settings.txt
client/src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Client.cpp  Client.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  HumanPlayer.cpp  HumanPlayer.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkReadPlayer.cpp  NetworkReadPlayer.h  Player.cpp  Player.h  Point.cpp  Point.h  RegularRules.cpp  RegularRules.h  Rules.cpp  Rules.h  Sign.cpp  Sign.h
client/tests/: AITest.cpp  BoardTest.cpp  GameTest.cpp  RulesTest.cpp  main_test.cpp
server/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  GameInfo.cpp  GameInfo.h  GamesList.cpp  GamesList.h  GamesListCommand.cpp  GamesListCommand.h  JoinCommand.cpp  JoinCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  a.out  main.cpp  makefile  settings.txt
