cmake_minimum_required(VERSION 3.8)
project(ReversiGame)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        client/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        client/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-matchers.h
        client/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-port.h
        client/lib/googletest-master/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
        client/lib/googletest-master/googlemock/include/gmock/internal/gmock-internal-utils.h
        client/lib/googletest-master/googlemock/include/gmock/internal/gmock-port.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-actions.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-cardinalities.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-generated-actions.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-generated-function-mockers.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-generated-matchers.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-generated-nice-strict.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-matchers.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-more-actions.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-more-matchers.h
        client/lib/googletest-master/googlemock/include/gmock/gmock-spec-builders.h
        client/lib/googletest-master/googlemock/include/gmock/gmock.h
        client/lib/googletest-master/googlemock/src/gmock-all.cc
        client/lib/googletest-master/googlemock/src/gmock-cardinalities.cc
        client/lib/googletest-master/googlemock/src/gmock-internal-utils.cc
        client/lib/googletest-master/googlemock/src/gmock-matchers.cc
        client/lib/googletest-master/googlemock/src/gmock-spec-builders.cc
        client/lib/googletest-master/googlemock/src/gmock.cc
        client/lib/googletest-master/googlemock/src/gmock_main.cc
        client/lib/googletest-master/googlemock/test/gmock-actions_test.cc
        client/lib/googletest-master/googlemock/test/gmock-cardinalities_test.cc
        client/lib/googletest-master/googlemock/test/gmock-generated-actions_test.cc
        client/lib/googletest-master/googlemock/test/gmock-generated-function-mockers_test.cc
        client/lib/googletest-master/googlemock/test/gmock-generated-internal-utils_test.cc
        client/lib/googletest-master/googlemock/test/gmock-generated-matchers_test.cc
        client/lib/googletest-master/googlemock/test/gmock-internal-utils_test.cc
        client/lib/googletest-master/googlemock/test/gmock-matchers_test.cc
        client/lib/googletest-master/googlemock/test/gmock-more-actions_test.cc
        client/lib/googletest-master/googlemock/test/gmock-nice-strict_test.cc
        client/lib/googletest-master/googlemock/test/gmock-port_test.cc
        client/lib/googletest-master/googlemock/test/gmock-spec-builders_test.cc
        client/lib/googletest-master/googlemock/test/gmock_all_test.cc
        client/lib/googletest-master/googlemock/test/gmock_ex_test.cc
        client/lib/googletest-master/googlemock/test/gmock_leak_test_.cc
        client/lib/googletest-master/googlemock/test/gmock_link2_test.cc
        client/lib/googletest-master/googlemock/test/gmock_link_test.cc
        client/lib/googletest-master/googlemock/test/gmock_link_test.h
        client/lib/googletest-master/googlemock/test/gmock_output_test_.cc
        client/lib/googletest-master/googlemock/test/gmock_stress_test.cc
        client/lib/googletest-master/googlemock/test/gmock_test.cc
        client/lib/googletest-master/googletest/codegear/gtest_all.cc
        client/lib/googletest-master/googletest/codegear/gtest_link.cc
        client/lib/googletest-master/googletest/include/gtest/internal/custom/gtest-port.h
        client/lib/googletest-master/googletest/include/gtest/internal/custom/gtest-printers.h
        client/lib/googletest-master/googletest/include/gtest/internal/custom/gtest.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-death-test-internal.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-filepath.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-linked_ptr.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-param-util-generated.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-param-util.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-port-arch.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-port.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-string.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-tuple.h
        client/lib/googletest-master/googletest/include/gtest/internal/gtest-type-util.h
        client/lib/googletest-master/googletest/include/gtest/gtest-death-test.h
        client/lib/googletest-master/googletest/include/gtest/gtest-message.h
        client/lib/googletest-master/googletest/include/gtest/gtest-param-test.h
        client/lib/googletest-master/googletest/include/gtest/gtest-printers.h
        client/lib/googletest-master/googletest/include/gtest/gtest-spi.h
        client/lib/googletest-master/googletest/include/gtest/gtest-test-part.h
        client/lib/googletest-master/googletest/include/gtest/gtest-typed-test.h
        client/lib/googletest-master/googletest/include/gtest/gtest.h
        client/lib/googletest-master/googletest/include/gtest/gtest_pred_impl.h
        client/lib/googletest-master/googletest/include/gtest/gtest_prod.h
        client/lib/googletest-master/googletest/samples/prime_tables.h
        client/lib/googletest-master/googletest/samples/sample1.cc
        client/lib/googletest-master/googletest/samples/sample1.h
        client/lib/googletest-master/googletest/samples/sample10_unittest.cc
        client/lib/googletest-master/googletest/samples/sample1_unittest.cc
        client/lib/googletest-master/googletest/samples/sample2.cc
        client/lib/googletest-master/googletest/samples/sample2.h
        client/lib/googletest-master/googletest/samples/sample2_unittest.cc
        client/lib/googletest-master/googletest/samples/sample3-inl.h
        client/lib/googletest-master/googletest/samples/sample3_unittest.cc
        client/lib/googletest-master/googletest/samples/sample4.cc
        client/lib/googletest-master/googletest/samples/sample4.h
        client/lib/googletest-master/googletest/samples/sample4_unittest.cc
        client/lib/googletest-master/googletest/samples/sample5_unittest.cc
        client/lib/googletest-master/googletest/samples/sample6_unittest.cc
        client/lib/googletest-master/googletest/samples/sample7_unittest.cc
        client/lib/googletest-master/googletest/samples/sample8_unittest.cc
        client/lib/googletest-master/googletest/samples/sample9_unittest.cc
        client/lib/googletest-master/googletest/src/gtest-all.cc
        client/lib/googletest-master/googletest/src/gtest-death-test.cc
        client/lib/googletest-master/googletest/src/gtest-filepath.cc
        client/lib/googletest-master/googletest/src/gtest-internal-inl.h
        client/lib/googletest-master/googletest/src/gtest-port.cc
        client/lib/googletest-master/googletest/src/gtest-printers.cc
        client/lib/googletest-master/googletest/src/gtest-test-part.cc
        client/lib/googletest-master/googletest/src/gtest-typed-test.cc
        client/lib/googletest-master/googletest/src/gtest.cc
        client/lib/googletest-master/googletest/src/gtest_main.cc
        client/lib/googletest-master/googletest/test/gtest-death-test_ex_test.cc
        client/lib/googletest-master/googletest/test/gtest-death-test_test.cc
        client/lib/googletest-master/googletest/test/gtest-filepath_test.cc
        client/lib/googletest-master/googletest/test/gtest-linked_ptr_test.cc
        client/lib/googletest-master/googletest/test/gtest-listener_test.cc
        client/lib/googletest-master/googletest/test/gtest-message_test.cc
        client/lib/googletest-master/googletest/test/gtest-options_test.cc
        client/lib/googletest-master/googletest/test/gtest-param-test2_test.cc
        client/lib/googletest-master/googletest/test/gtest-param-test_test.cc
        client/lib/googletest-master/googletest/test/gtest-param-test_test.h
        client/lib/googletest-master/googletest/test/gtest-port_test.cc
        client/lib/googletest-master/googletest/test/gtest-printers_test.cc
        client/lib/googletest-master/googletest/test/gtest-test-part_test.cc
        client/lib/googletest-master/googletest/test/gtest-tuple_test.cc
        client/lib/googletest-master/googletest/test/gtest-typed-test2_test.cc
        client/lib/googletest-master/googletest/test/gtest-typed-test_test.cc
        client/lib/googletest-master/googletest/test/gtest-typed-test_test.h
        client/lib/googletest-master/googletest/test/gtest-unittest-api_test.cc
        client/lib/googletest-master/googletest/test/gtest_all_test.cc
        client/lib/googletest-master/googletest/test/gtest_break_on_failure_unittest_.cc
        client/lib/googletest-master/googletest/test/gtest_catch_exceptions_test_.cc
        client/lib/googletest-master/googletest/test/gtest_color_test_.cc
        client/lib/googletest-master/googletest/test/gtest_env_var_test_.cc
        client/lib/googletest-master/googletest/test/gtest_environment_test.cc
        client/lib/googletest-master/googletest/test/gtest_filter_unittest_.cc
        client/lib/googletest-master/googletest/test/gtest_help_test_.cc
        client/lib/googletest-master/googletest/test/gtest_list_tests_unittest_.cc
        client/lib/googletest-master/googletest/test/gtest_main_unittest.cc
        client/lib/googletest-master/googletest/test/gtest_no_test_unittest.cc
        client/lib/googletest-master/googletest/test/gtest_output_test_.cc
        client/lib/googletest-master/googletest/test/gtest_pred_impl_unittest.cc
        client/lib/googletest-master/googletest/test/gtest_premature_exit_test.cc
        client/lib/googletest-master/googletest/test/gtest_prod_test.cc
        client/lib/googletest-master/googletest/test/gtest_repeat_test.cc
        client/lib/googletest-master/googletest/test/gtest_shuffle_test_.cc
        client/lib/googletest-master/googletest/test/gtest_sole_header_test.cc
        client/lib/googletest-master/googletest/test/gtest_stress_test.cc
        client/lib/googletest-master/googletest/test/gtest_throw_on_failure_ex_test.cc
        client/lib/googletest-master/googletest/test/gtest_throw_on_failure_test_.cc
        client/lib/googletest-master/googletest/test/gtest_uninitialized_test_.cc
        client/lib/googletest-master/googletest/test/gtest_unittest.cc
        client/lib/googletest-master/googletest/test/gtest_xml_outfile1_test_.cc
        client/lib/googletest-master/googletest/test/gtest_xml_outfile2_test_.cc
        client/lib/googletest-master/googletest/test/gtest_xml_output_unittest_.cc
        client/lib/googletest-master/googletest/test/production.cc
        client/lib/googletest-master/googletest/test/production.h
        client/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.cc
        client/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.h
        client/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget_test.cc
        client/src/AIPlayer.cpp
        client/src/AIPlayer.h
        client/src/Board.cpp
        client/src/Board.h
        client/src/Client.cpp
        client/src/Client.h
        client/src/ConsoleDisplay.cpp
        client/src/ConsoleDisplay.h
        client/src/Display.h
        client/src/Game.cpp
        client/src/Game.h
        client/src/GameMenu.cpp
        client/src/GameMenu.h
        client/src/HumanPlayer.cpp
        client/src/HumanPlayer.h
        client/src/NetworkPlayer.cpp
        client/src/NetworkPlayer.h
        client/src/Player.cpp
        client/src/Player.h
        client/src/Point.cpp
        client/src/Point.h
        client/src/RegularRules.cpp
        client/src/RegularRules.h
        client/src/Rules.cpp
        client/src/Rules.h
        client/src/Sign.cpp
        client/src/Sign.h
        client/tests/AITest.cpp
        client/tests/BoardTest.cpp
        client/tests/GameTest.cpp
        client/tests/main_test.cpp
        client/tests/RulesTest.cpp
        client/main.cpp
        server/main.cpp
        server/Server.cpp
        server/Server.h)

add_executable(ReversiGame ${SOURCE_FILES})